fixed layout issues with GameLab media queries;

--- a/Website/Code/CSS/main.scss
+++ b/Website/Code/CSS/main.scss
@@ -229,6 +229,7 @@ body {
   #logoContainer {
     text-align: center;
     margin: 0;
+    margin-top: 50px;
     margin-bottom: 50px;
   }
 
@@ -272,11 +273,12 @@ body {
     margin: auto;
     text-align: center;
     padding: 0;
+    padding-top: 50px;
   }
 
   #codeArtLogoContainer{
     text-align: center;
-    padding-top: 50px;
+    padding-top: 100px;
   }
 
   #codeArtLogo {
@@ -297,7 +299,7 @@ body {
   #tylerInfo {
     height: 573px;
     padding-top: 85px;
-    padding-right: 500px;
+    padding-right: 585px;
     text-align: right;
   }
 
